resources/less/frontend/modules/submit-listing-page.less
.awpcp-submit-listing-section div {
    margin: 0; // To overwrite a rule on Responsive theme's CSS.
}

.awpcp-submit-listing-section {
    .awpcp-box;
    .awpcp-bordered-box;
    .awpcp-rounded-box;

    background-color: #fff;
    margin-bottom: 8px;
    padding: 0;

    .awpcp-submit-listing-section-title {
        background: #d2d2d2;
        color: #333;
        cursor: pointer;
        float: none;
        font-size: 1em;
        line-height: 1.5;
        margin: 0;
        padding: 2px 4px;

        span {
            box-sizing: border-box;
            float: right;
            margin: 2px;
        }
    }

    .awpcp-submit-listing-section-content {
        padding: 12px;
    }

    .awpcp-form-spacer {
        margin-bottom: 10px;
    }

    .awpcp-order-submit-listing-section__read_mode p {
        margin: 0;
    }
    .awpcp-order-submit-listing-section__read_mode p span {
        font-weight: bold;
    }

    .awpcp-order-submit-listing-section--selected-categories {
        font-weight: bold;
    }

    .awpcp-order-submit-listing-section--loading-message {
        display: inline-block;

        .awpcp-spinner {
            margin: 0 6px 0 4px;
            visibility: visible;
        }
    }

    .form-submit {
        margin: 0;
    }
}

.awpcp-submit-listing-section-without-decoration {
    background: none;
    border: none;

    .awpcp-submit-listing-section-title {
        display: none;
    }

    .awpcp-submit-listing-section-content {
        padding-left: 0;
        padding-right: 0;
    }
}

.awpcp-order-submit-listing-section__edit_mode > form {
    margin: 0;
}

.awpcp-actions-submit-listing-section__edit_mode .awpcp-listing-action-confirmation {
    span {
        padding: 0 4px;
    }

    button {
        margin: 0 4px;
    }
}

.awpcp-save-submit-listing-section {
    .awpcp-preview-listing-button-container {
        text-align: center;
    }

    .awpcp-listing-preview-container {
        border-top: 1px solid #d2d2d2;
        margin-top: 12px;
        padding-top: 2px;

        .awpcp-classifieds-search-bar, .awpcp-classifieds-menu {
            display: none;
        }
    }
}

